
[TestScripts/Hello_World - 1]
 Hello, World 

---

[TestScripts/Data_Types - 1]
 2 
 this is a string 
 true 
 false 

---

[TestScripts/Arithmetic_Types - 1]
 3 
 17 
 1 
 14 

---

[TestScripts/Booleans - 1]
 true 
 false 
 true 
 false 
 false 
 true 
 false 
 false 
 false 
 true 
 true 
 true 
 false 
 true 
 true 
 false 

---

[TestScripts/arithmetic.ht - 1]
 3 
 17 
 1 
 14 
 0 
 1 

---

[TestScripts/booleans.ht - 1]
 true 
 false 
 true 
 false 
 false 
 true 
 false 
 false 
 false 
 true 
 true 
 true 
 false 
 true 
 true 
 false 

---

[TestScripts/data-types.ht - 1]
 2 
 this is a string 
 true 
 false 

---

[TestScripts/factorial.ht - 1]
 120 
 3628800 

---

[TestScripts/fibonacci.ht - 1]
 13 
 55 

---

[TestScripts/fizzbuzz.ht - 1]
 Fizz 
 Buzz 
 FizzBuzz 
 1 

---

[TestScripts/hello-world.ht - 1]
 Hello, World 

---

[TestScripts/sum-of-digits.ht - 1]
 1 
 10 
 15 

---

[TestScripts/variables.ht - 1]
 My name is pspiagicw 

---

[TestScripts/flow.ht - 1]
 Always true! 
 NULL 
 Number is 1 
 Number is not 1 
 The value is: 3 
 The value is: 2 
 The value is: 1 
 Number is something else 
 The number is 3! 
 Number is 2 
 NULL 
 Number is 1 
 NULL 
 Number is something else 

---

[TestScripts/functions.ht - 1]
 Hello, hotshooter! 
 Hello, pspiagicw 
 Hello hotshooter! 
 7 
 7 

---

[TestScripts/palindrome.ht - 1]
 [!!] Runtime Error: ERROR: No function named 'concat'


---

[TestScripts/linear-search.ht - 1]

---

[TestScripts/test.ht - 1]

---

[TestScripts/types.ht - 1]
 true 
 true 
 true 
 true 

---

[TestScripts/numbers.ht - 1]
 [!!] Runtime Error: ERROR: No function named 'sqrt'


---

[TestScripts/strings.ht - 1]
 [!!] Runtime Error: ERROR: No function named 'concat'


---

[TestScripts/tables.ht - 1]
 8 
 1 
 [2 3] 
 [!!] Runtime Error: ERROR: No function named 'list'


---
